Fix for writing tools modal close icon and increased margin for more breathing room for modals on narrow viewports

--- a/sass/refresh-styles-themes.scss
+++ b/sass/refresh-styles-themes.scss
@@ -1674,6 +1674,10 @@ label:hover:before {
 /* MODALS */
 .modal-backdrop { background: hsla(132, 19%, 11%, 1); }
 
+.modal-dialog {
+  margin: 2rem;
+}
+
 .modal-title {
   max-width: 90%;
 }
